--- a/KC_House_Price_Prediction.ipynb
+++ b/KC_House_Price_Prediction.ipynb
@@ -2990,24 +2990,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
-   "id": "40967efc-4f66-4011-ba9d-6538e81f776e",
+   "execution_count": null,
+   "id": "7a95b709",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'Y_test' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[187], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m r2_score(Y_test,Y_pred)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'Y_test' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "r2_score(Y_test,Y_pred)"
+    "r2_score(y_test,y_pred)"
    ]
   },
   {
@@ -3020,7 +3008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": null,
    "id": "ba190856-55ce-4588-8643-d1969b287b51",
    "metadata": {},
    "outputs": [],
@@ -3030,7 +3018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": null,
    "id": "9b9d9365-1a2b-472e-a6b6-468e754836a2",
    "metadata": {},
    "outputs": [
@@ -3050,6 +3038,14 @@
    "source": [
     "new_house_std"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "164c10c4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
